--- a/web/apps/synapse/src/pages/CreateProject/SecurityDeposit/SecurityDeposit.scss
+++ b/web/apps/synapse/src/pages/CreateProject/SecurityDeposit/SecurityDeposit.scss
@@ -193,7 +193,7 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
-    align-items: flex-start;
+    align-items: flex-end;
 
     button {
       font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, monospace;
