--- a/web/apps/synapse/src/pages/WebhookPage/WebhookPage.scss
+++ b/web/apps/synapse/src/pages/WebhookPage/WebhookPage.scss
@@ -5,7 +5,7 @@
   max-width: 100%;
   display: flex !important;
   flex-direction: column !important;
-  align-items: center !important; /* CENTER EVERYTHING GLOBALLY */
+  align-items: center !important;
   text-align: center;
 
   // Force font on everything in this subtree
