--- a/web/libs/editor/src/components/ImageView/ImageView.module.scss
+++ b/web/libs/editor/src/components/ImageView/ImageView.module.scss
@@ -91,6 +91,12 @@
   position: relative;
   width: 100%;
   height: 100%;
+  cursor: crosshair !important;
+
+  // Force Konva content to also respect this
+  :global(.konvajs-content) {
+    cursor: crosshair !important;
+  }
 
   // padding hack to fill the empty space with given aspect ratio
   // see ImageView.render()
